--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "source/glfw"]
 	path = source/glfw
 	url = https://github.com/glfw/glfw
+[submodule "source/glm"]
+	path = source/glm
+	url = https://github.com/g-truc/glm
