--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ file(GLOB PhysvoyantSrc
 	"source/engine/*.*"
 	"source/game_objects/*.*"
 	"source/geometry/*.*"
+	"source/glad/*.*"
 	"source/interfaces/*.*"
+	"source/KHR/*.*"
 	"source/math/*.*"
 	"source/renderer/*.*"
 	"source/scene/*.*"
